--- a/src/containers/Slider/style.scss
+++ b/src/containers/Slider/style.scss
@@ -5,6 +5,7 @@
   width: 100%;
   max-width: 1440px;
   height: 586px;
+  overflow: hidden;
   .SlideCard {
     width: 100%;
     left: 0;
@@ -13,6 +14,7 @@
     transition: opacity 1s;
     &--hide {
       opacity: 0;
+      
     }
     &--display {
       animation: slide 1s forwards;
